--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.0",
+    "tslint": "^6.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint -p tsconfig.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^1.19.1",
+    "tslint-config-security": "^1.16.0",
+    "tslint-plugin-prettier": "^2.1.0"
   }
 }
